packages/isar_community_generator/test/errors/class/invalid_name.dart
// must not be abstract

import 'package:isar_community/isar_community.dart';

@collection
abstract class Model {
  Id? id;
}
